bug 334704. calIDuration.addDuration doesn't work with negative durations. r=dmose